@@ -55,7 +55,7 @@ def get_decode_pipeline_string(props):
             scaling_template = ('videoscale method=1 !'
                 ' video/x-raw-yuv,width=%(sw)s,height=%(h)s,'
                 'pixel-aspect-ratio=%(par_n)d/%(par_d)d !' % dict(
-                    sw=scaled_width, 
+                    sw=scaled_width,
                     h=height, par_n=par[0], par_d=par[1]))
         else:
             scaling_template = ('videoscale method=1 !'
@@ -80,7 +80,7 @@ def get_decode_pipeline_string(props):
         ' ! %(identity)s name=audioid' \
         ' ! audioconvert ! level name=level ! volume name=volume' \
         ' ! tee name=t ! @feeder:audio@' % dict(
-            audiopid=audio_pid_template, 
+            audiopid=audio_pid_template,
             audiodec=audio_decoder,
             identity=idsync_template,
             program_number=program_number)
@@ -93,14 +93,15 @@ def get_decode_pipeline_string(props):
                     '    ! video/x-raw-yuv,framerate=%(fr)s' \
                     '    ! %(deinterlacing)s' \
                     '    ! %(scaling)s %(identity)s name=videoid ' \
-                    '    ! @feeder:video@' % dict(template=template, 
+                    '    ! @feeder:video@' % dict(template=template,
                             scaling=scaling_template,
                             deinterlacing=deinterlacing_template,
-                            identity=idsync_template, 
+                            identity=idsync_template,
                             videodec=video_decoder, fr=fr))
     else:
-        template = '%s t. ! @feeder:video@' % template
+        template = '%s t. ! queue ! @feeder:video@' % template
     return template
+
 
 # Statistics we get from DVB are:
 # signal: signal strength (0 - 65535)
@@ -108,6 +109,8 @@ def get_decode_pipeline_string(props):
 # ber: bit error rate (seems to be driver specific scale)
 # unc: uncorrected bits (should be cumulative but drivers do not follow spec)
 # lock: locked to signal (boolean)
+
+
 class DVBTSProducer(feedcomponent.ParseLaunchComponent):
 
     def init(self):
@@ -118,21 +121,21 @@ class DVBTSProducer(feedcomponent.ParseLaunchComponent):
         self.uiState.addKey('lock', False)
         self.uiState.addDictKey('channelnames')
         self.uiState.addDictKey('whatson')
-    
+
     def do_check_dvb(self):
         props = self.config['properties']
         dvb_type = self.dvb_type = props.get('dvb-type')
         if dvb_type != 'T' and dvb_type != 'S' and dvb_type != 'FILE':
-            msg = "Property dvb-type can only be T (for DVB-T) or S (for DVB-S)."
+            msg = \
+                "Property dvb-type can only be T (for DVB-T) or S (for DVB-S)."
             return defer.fail(errors.ConfigError(msg))
         # check if the required DVB parameters are passed
         dvb_required_parameters = {
-            "T": ["modulation", "trans-mode", 
+            "T": ["modulation", "trans-mode",
                 "bandwidth", "code-rate-lp", "code-rate-hp", "guard",
                 "hierarchy", "frequency"],
             "S": ["polarity", "symbol-rate", "frequency"],
-            "FILE":  ["filename"]
-        }
+            "FILE": ["filename"]}
         for param in dvb_required_parameters[dvb_type]:
             if not param in props:
                 msg = T_(N_(
@@ -166,9 +169,9 @@ class DVBTSProducer(feedcomponent.ParseLaunchComponent):
             guard = props.get('guard')
             hierarchy = props.get('hierarchy')
             dvbsrc_template = '''
-dvbbasebin modulation="QAM %(modulation)d" 
-trans-mode=%(trans_mode)dk
-bandwidth=%(bandwidth)d code-rate-lp=%(code_rate_lp)s 
+dvbbasebin modulation="QAM %(modulation)d"
+ trans-mode=%(trans_mode)dk
+bandwidth=%(bandwidth)d code-rate-lp=%(code_rate_lp)s
 code-rate-hp=%(code_rate_hp)s guard=%(guard)d
 hierarchy=%(hierarchy)d''' % dict(modulation=modulation, trans_mode=trans_mode,
                 bandwidth=bandwidth, code_rate_lp=code_rate_lp,
@@ -178,10 +181,10 @@ hierarchy=%(hierarchy)d''' % dict(modulation=modulation, trans_mode=trans_mode,
             polarity = props.get('polarity')
             symbol_rate = props.get('symbol-rate')
             sat = props.get('satellite-number', 0)
-	        code_rate_hp = props.get('code-rate-hp', None)
+            code_rate_hp = props.get('code-rate-hp', None)
             dvbsrc_template = '''
-dvbbasebin polarity=%(polarity)s symbol-rate=%(symbol_rate)s 
-diseqc-source=%(sat)d ''' % dict(polarity=polarity, symbol_rate=symbol_rate, 
+dvbbasebin polarity=%(polarity)s symbol-rate=%(symbol_rate)s
+ diseqc-source=%(sat)d ''' % dict(polarity=polarity, symbol_rate=symbol_rate,
     sat=sat)
 
             if code_rate_hp:
@@ -189,8 +192,8 @@ diseqc-source=%(sat)d ''' % dict(polarity=polarity, symbol_rate=symbol_rate,
                     code_rate_hp)
         elif self.dvb_type == "FILE":
             filename = props.get('filename')
-            dvbsrc_template = """filesrc location=%s name=src 
-                ! mpegtsparse program-numbers=%d""" % (filename,program_numbers)
+            dvbsrc_template = """filesrc location=%s name=src
+            ! mpegtsparse program-numbers=%d""" % (filename, program_numbers)
         if self.dvb_type == "S" or self.dvb_type == "T":
             freq = props.get('frequency')
             dvbsrc_template = "%s frequency=%d program-numbers=%s name=src" % (
@@ -200,7 +203,7 @@ diseqc-source=%(sat)d ''' % dict(polarity=polarity, symbol_rate=symbol_rate,
             device = props.get('device', None)
             if device and adapter == 0 and frontend == 0:
                 # set adapter to be the number from /dev/dvb/adapter
-                for adapnum in range(1,8):
+                for adapnum in range(1, 8):
                     if str(adapnum) in device:
                         adapter = adapnum
                 # FIXME: add a warning here
@@ -243,8 +246,8 @@ diseqc-source=%(sat)d ''' % dict(polarity=polarity, symbol_rate=symbol_rate,
             s = message.structure
             self.debug("PMT info received for program %d", s["program-number"])
             for stream in s["streams"]:
-                self.debug("PMT: Stream on pid 0x%04x of type: %d", 
-                    stream["pid"], 
+                self.debug("PMT: Stream on pid 0x%04x of type: %d",
+                    stream["pid"],
                     stream["stream-type"])
         elif message.structure.get_name() == "sdt":
             s = message.structure
@@ -253,11 +256,11 @@ diseqc-source=%(sat)d ''' % dict(polarity=polarity, symbol_rate=symbol_rate,
                 services = s["services"]
                 for service in services:
                     name = service.get_name()
-                    sid =  name[8:]
-                    if service.has_key("name"):
+                    sid = name[8:]
+                    if "name" in service:
                         name = service["name"]
                     if sid in self.program_numbers:
-                        self.debug("Setting channel %s to have name %s", 
+                        self.debug("Setting channel %s to have name %s",
                             sid, name)
                         self.uiState.setitem('channelnames', sid, name)
         elif message.structure.get_name() == "eit":
@@ -270,21 +273,22 @@ diseqc-source=%(sat)d ''' % dict(polarity=polarity, symbol_rate=symbol_rate,
                         txt = "%d/%d/%d %d:%d (%d minutes)" % (
                             e["day"], e["month"], e["year"], e["hour"],
                             e["minute"], e["duration"]/60)
-                        if e.has_key("name"):
+                        if "name" in e:
                             txt = "%s %s" % (txt, e["name"])
-                        if e.has_key("description"):
+                        if "description" in e:
                             txt = "%s: %s" % (txt, e["description"])
-                        self.debug("Now on channel %s: %s", 
+                        self.debug("Now on channel %s: %s",
                             str(s["service-id"]), txt)
                         self.uiState.setitem('whatson', str(s["service-id"]),
                             txt)
                     name = "None"
-                    if e.has_key("name"):
+                    if "name" in e:
                         name = e["name"]
-                    self.debug("event %s of running status: %d", 
+                    self.debug("event %s of running status: %d",
                         name,
                         e["running-status"])
-                    
+
+
 class DVB(DVBTSProducer):
 
     def do_check(self):
@@ -299,7 +303,6 @@ class DVB(DVBTSProducer):
             "@feeder:mpegts@" % (dvbsrc_template, decode_template)
         return template
 
-    
     def configure_pipeline(self, pipeline, properties):
         super(DVBTSProducer, self).configure_pipeline(pipeline, properties)
         # add volume effect
@@ -311,10 +314,10 @@ class DVB(DVBTSProducer):
         audiodecoder = pipeline.get_by_name('audiodecoder')
         videodecoder = pipeline.get_by_name('videodecoder')
         if audiodecoder:
-            self._pad_monitors.attach(audiodecoder.get_pad('src'), 
+            self._pad_monitors.attach(audiodecoder.get_pad('src'),
                 "audiodecoder")
         if videodecoder:
-            self._pad_monitors.attach(videodecoder.get_pad('src'), 
+            self._pad_monitors.attach(videodecoder.get_pad('src'),
                 "videodecoder")
 
     def _bus_message_received_cb(self, bus, message):
@@ -331,7 +334,7 @@ class DVB(DVBTSProducer):
             self.uiState.set('unc', s["unc"])
             self.uiState.set('lock', s["lock"])
         elif message.structure.get_name() == 'imperfect-timestamp':
-            identityName = message.src.get_name() 
+            identityName = message.src.get_name()
             self.log("we have an imperfect stream from %s",
                 identityName[:-2])
             # figure out the discontinuity
@@ -343,7 +346,7 @@ class DVB(DVBTSProducer):
                     "timestamps with %s" % identityName[:-2]
             elif s["cur-timestamp"] < s["prev-timestamp"]:
                 message = "We went backwards in timestamp with %s" % (
-                    identityName[:-2],)
+                    identityName[:-2], )
             if message:
                 m = messages.Warning(T_(N_(
                     message)),
@@ -360,7 +363,7 @@ class DVB(DVBTSProducer):
             s = message.structure
             self.debug("PMT info received for program %d", s["program-number"])
             for stream in s["streams"]:
-                self.debug("PMT: pid %d type: %d", stream["pid"], 
+                self.debug("PMT: pid %d type: %d", stream["pid"],
                     stream["stream-type"])
 
     def pat_info_cb(self, sender, demux, param):
@@ -368,12 +371,12 @@ class DVB(DVBTSProducer):
         pi = demux.get_property("pat-info")
         for prog in pi:
             self.debug("PAT: Program %d on PID 0x%04x",
-                prog.props.program_number,prog.props.pid)
+                prog.props.program_number, prog.props.pid)
         self.debug("PAT parsing finished")
 
     def pmt_info_cb(self, sender, demux, param):
         pi = demux.get_property("pmt-info")
-        self.debug("PMT info for program: %d with version: %d", 
+        self.debug("PMT info for program: %d with version: %d",
             pi.props.program_number, pi.props.version_number)
         self.debug("PMT: PCR on PID 0x%04x", pi.props.pcr_pid)
         for s in pi.props.stream_info:
@@ -390,12 +393,13 @@ class DVB(DVBTSProducer):
         element = self.get_element('volume')
         return element.get_property('volume')
 
+
 class MpegTSSplitter(DVBTSProducer):
-    
+
     def init(self):
         self.uiState.addDictKey('channelnames')
         self.uiState.addDictKey('whatson')
-    
+
     def do_check_dvb(self):
         tsparse_element = gst.element_factory_make("mpegtsparse")
         if not tsparse_element:
@@ -405,9 +409,10 @@ class MpegTSSplitter(DVBTSProducer):
 
     def get_pipeline_string(self, props):
         program_number = props.get("program-number")
-        template = "mpegtsparse program-numbers=%d .program_%d"  % (
+        template = "mpegtsparse program-numbers=%d .program_%d" % (
             program_number, program_number)
         return template
+
 
 class MpegTSDecoder(feedcomponent.ParseLaunchComponent):
 
@@ -427,10 +432,10 @@ class MpegTSDecoder(feedcomponent.ParseLaunchComponent):
         audiodecoder = pipeline.get_by_name('audiodecoder')
         videodecoder = pipeline.get_by_name('videodecoder')
         if audiodecoder:
-            self._pad_monitors.attach(audiodecoder.get_pad('src'), 
+            self._pad_monitors.attach(audiodecoder.get_pad('src'),
                 "audiodecoder")
         if videodecoder:
-            self._pad_monitors.attach(videodecoder.get_pad('src'), 
+            self._pad_monitors.attach(videodecoder.get_pad('src'),
                 "videodecoder")
 
     def setVolume(self, value):
